--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - SHALL</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>About Us - SHALL</h1>
+    <img src="company_logo.png" alt="SHALL Logo">
+  </header>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <section class="company-info">
+    <h2>Company Information</h2>
+    <p><strong>Industry:</strong> App Development</p>
+    <p><strong>Mission:</strong> To make day-to-day life easier and free up space on users' phones.</p>
+    <p><strong>Service:</strong> Our app consolidates shop discounts, making it convenient for users to find the best deals.</p>
+    <p><strong>Geographic Reach:</strong> Currently serving Latvia, with plans to expand to a larger scale.</p>
+  </section>
 
+  <section class="team">
+    <h2>Meet the Team</h2>
+    <div class="team-member">
+      <img src="janis_basens_photo.jpg" alt="Jānis Bašēns">
+      <p><strong>Jānis Bašēns</strong> - CEO</p>
+    </div>
+    <div class="team-member">
+      <img src="roberts_assarovskis_photo.jpg" alt="Roberts Assarovskis">
+      <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
+    </div>
+    <div class="team-member">
+      <img src="rotislavs_berjoza_photo.jpg" alt="Rotislavs Berjoza">
+      <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
+    </div>
+    <div class="team-member">
+      <img src="mihaels_pallijs_photo.jpg" alt="Mihaels Pallijs">
+      <p><strong>Mihaels Pallijs</strong> - Programmer</p>
+    </div>
+    <div class="team-member">
+      <img src="arturs_bogdanovs_photo.jpg" alt="Artūrs Bogdanovs">
+      <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 SHALL. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
-</html> 
+</html>
