--- a/index.html
+++ b/index.html
@@ -20,28 +20,20 @@
     <p><strong>Geographic Reach:</strong> Currently serving Latvia, with plans to expand to a larger scale.</p>
   </section>
 
+  <section class="promo-video">
+    <h2>Promo Video</h2>
+    <!-- Add your promo video embed code or placeholder here -->
+    <!-- Example: -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+  </section>
+
   <section class="team">
     <h2>Meet the Team</h2>
     <div class="team-member">
       <img src="janis_basens_photo.jpg" alt="Jānis Bašēns">
       <p><strong>Jānis Bašēns</strong> - CEO</p>
     </div>
-    <div class="team-member">
-      <img src="roberts_assarovskis_photo.jpg" alt="Roberts Assarovskis">
-      <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
-    </div>
-    <div class="team-member">
-      <img src="rotislavs_berjoza_photo.jpg" alt="Rotislavs Berjoza">
-      <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
-    </div>
-    <div class="team-member">
-      <img src="mihaels_pallijs_photo.jpg" alt="Mihaels Pallijs">
-      <p><strong>Mihaels Pallijs</strong> - Programmer</p>
-    </div>
-    <div class="team-member">
-      <img src="arturs_bogdanovs_photo.jpg" alt="Artūrs Bogdanovs">
-      <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
-    </div>
+    <!-- Add other team members here -->
   </section>
 
   <footer>
