--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
       <img src="janis_basens_photo.jpg" alt="Jānis Bašēns">
       <p><strong>Jānis Bašēns</strong> - CEO</p>
     </div>
-    <!-- Add other team members here -->
+    <div class="team-member">
+      <img src="roberts_assarovskis_photo.jpg" alt="Roberts Assarovskis">
+      <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
+    </div>
+    <div class="team-member">
+      <img src="rotislavs_berjoza_photo.jpg" alt="Rotislavs Berjoza">
+      <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
+    </div>
+    <div class="team-member">
+      <img src="mihaels_pallijs_photo.jpg" alt="Mihaels Pallijs">
+      <p><strong>Mihaels Pallijs</strong> - Programmer</p>
+    </div>
+    <div class="team-member">
+      <img src="arturs_bogdanovs_photo.jpg" alt="Artūrs Bogdanovs">
+      <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
+    </div>
   </section>
 
   <footer>
