--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
     </div>
   </section>
+  <section class="Lorem Ipssum">
+    <p></n/n/n/n/n/n</p>
+
+  </section>
 
   <footer>
     <p>&copy; 2024 SHALL. All rights reserved.</p>
