--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Promo Video</h2>
     <!-- Add your promo video embed code or placeholder here -->
     <!-- Example: -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dOqUIvce22c" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section class="team">
