--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <h2>Promo Video</h2>
     <!-- Add your promo video embed code or placeholder here -->
     <!-- Example: -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JDOjFnN9RXw?si=LuqVuw6IThaiyDNh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </section>
+    <iframe width="640" height="390" 
+    src="https://www.youtube.com/embed/JDOjFnN9RXw?si=lu3HVZPe64tczOxJ}" 
+    frameborder="0" allowfullscreen></iframe>
+   </section>
 
   <section class="team">
     <h2>Meet the Team</h2>
