--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>About Us - SHALL</h1>
-    <img src="company_logo.png" alt="SHALL Logo">
+    <img src="logo.png" alt="SHALL Logo">
   </header>
 
   <section class="company-info">
@@ -32,23 +32,23 @@
   <section class="team">
     <h2>Meet the Team</h2>
     <div class="team-member">
-      <img src="janis_basens_photo.jpg" alt="Jānis Bašēns">
+      <img src="janis.png" alt="Jānis Bašēns">
       <p><strong>Jānis Bašēns</strong> - CEO</p>
     </div>
     <div class="team-member">
-      <img src="roberts_assarovskis_photo.jpg" alt="Roberts Assarovskis">
+      <img src="roberts.png" alt="Roberts Assarovskis">
       <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
     </div>
     <div class="team-member">
-      <img src="rotislavs_berjoza_photo.jpg" alt="Rotislavs Berjoza">
+      <img src="rotislavs.png" alt="Rotislavs Berjoza">
       <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
     </div>
     <div class="team-member">
-      <img src="mihaels_pallijs_photo.jpg" alt="Mihaels Pallijs">
+      <img src="mihails.png" alt="Mihaels Pallijs">
       <p><strong>Mihaels Pallijs</strong> - Programmer</p>
     </div>
     <div class="team-member">
-      <img src="arturs_bogdanovs_photo.jpg" alt="Artūrs Bogdanovs">
+      <img src="arturs.png" alt="Artūrs Bogdanovs">
       <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
     </div>
   </section>
