--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
   </section>
 
-  <section class="fake-reviews">
-    <h2>Fake Reviews</h2>
+  <section class="reviews">
+    <h2>Reviews</h2>
     <p>Amazing app! It helped me save a lot of money on my shopping.</p>
     <p>Highly recommend! Great user experience and fantastic deals.</p>
     <p>SHALL app is a game-changer! I never miss out on discounts now.</p>
@@ -65,11 +65,16 @@
     <h2>Contact Us</h2>
     <p>If you have any questions or inquiries, feel free to contact us at:</p>
     <p>Email: info@shall.com</p>
-    <p>Phone: +1234567890</p>
+    <p>Phone: +371 25 409 558</p>
+  </section>
+    <section class="contact-us">
+    <p> </p>
+    <p> </p>
+    <p> </p>
   </section>
 
   <footer class="footer">
-    <p>&copy; 2024 SHALL. All rights reserved.</p>
+    <p>&copy; 2024 SHALL. Mācību uzņēmums.</p>
   </footer>
   <script src="script.js"></script>
 </body>
