--- a/index.html
+++ b/index.html
@@ -54,12 +54,37 @@
     </div>
   </section>
 
-  <section class="reviews">
-    <h2>Reviews</h2>
-    <p>Amazing app! It helped me save a lot of money on my shopping.</p>
-    <p>Highly recommend! Great user experience and fantastic deals.</p>
-    <p>SHALL app is a game-changer! I never miss out on discounts now.</p>
-  </section>
+<section class="reviews">
+  <h2>Customer Reviews</h2>
+  <div class="review">
+    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <div class="review-content">
+      <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
+      <p class="review-author">- John Doe</p>
+    </div>
+  </div>
+  <div class="review">
+    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <div class="review-content">
+      <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
+      <p class="review-author">- Jane Smith</p>
+    </div>
+  </div>
+  <div class="review">
+    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <div class="review-content">
+      <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
+      <p class="review-author">- Alex Johnson</p>
+    </div>
+  </div>
+</section>
+
+<div class="info-box">
+  <p>Contact us for any queries or feedback:</p>
+  <p>Email: info@shall.com</p>
+  <p>Phone: +371 25 409 558</p>
+</div>
+
 
   <section class="contact-us">
     <h2>Contact Us</h2>
