--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 <section class="reviews">
   <h2>Customer Reviews</h2>
   <div class="review">
-    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <img src="profile.png" alt="Profile Picture">
     <div class="review-content">
       <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
       <p class="review-author">- John Doe</p>
     </div>
   </div>
   <div class="review">
-    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <img src="profile.png" alt="Profile Picture">
     <div class="review-content">
       <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
       <p class="review-author">- Jane Smith</p>
     </div>
   </div>
   <div class="review">
-    <img src="profile_pic_generic.png" alt="Profile Picture">
+    <img src="profile.png" alt="Profile Picture">
     <div class="review-content">
       <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
       <p class="review-author">- Alex Johnson</p>
@@ -86,11 +86,6 @@
 </div>
 
 
-  <section class="contact-us">
-    <h2>Contact Us</h2>
-    <p>If you have any questions or inquiries, feel free to contact us at:</p>
-    <p>Email: info@shall.com</p>
-    <p>Phone: +371 25 409 558</p>
   </section>
     <section class="contact-us">
     <p> </p>
