--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - SHALL</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>About Us - SHALL</h1>
-    <img src="logo.png" alt="SHALL Logo">
-  </header>
+
+<header>
+  <h1>About Us - SHALL</h1>
+  <img src="logo.png" alt="SHALL Logo">
+</header>
+
+<div class="container">
 
   <section class="company-info">
     <h2>Company Information</h2>
@@ -23,10 +26,10 @@
   <section class="promo-video">
     <h2>Promo Video</h2>
     <!-- Adjusted YouTube video width -->
-    <iframe width="640" height="390" 
+    <iframe width="800" height="450" 
     src="https://www.youtube.com/embed/JDOjFnN9RXw?si=lu3HVZPe64tczOxJ}" 
     frameborder="0" allowfullscreen></iframe>
-   </section>
+  </section>
 
   <section class="team">
     <h2>Meet the Team</h2>
@@ -54,50 +57,43 @@
     </div>
   </section>
 
-<section class="reviews">
-  <h2>Customer Reviews</h2>
-  <div class="review">
-    <img src="profile.png" alt="Profile Picture">
-    <div class="review-content">
-      <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
-      <p class="review-author">- John Doe</p>
+  <section class="reviews">
+    <h2>Customer Reviews</h2>
+    <div class="review">
+      <img src="profile.png" alt="Profile Picture">
+      <div class="review-content">
+        <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
+        <p class="review-author">- John Doe</p>
+      </div>
     </div>
-  </div>
-  <div class="review">
-    <img src="profile.png" alt="Profile Picture">
-    <div class="review-content">
-      <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
-      <p class="review-author">- Jane Smith</p>
+    <div class="review">
+      <img src="profile.png" alt="Profile Picture">
+      <div class="review-content">
+        <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
+        <p class="review-author">- Jane Smith</p>
+      </div>
     </div>
-  </div>
-  <div class="review">
-    <img src="profile.png" alt="Profile Picture">
-    <div class="review-content">
-      <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
-      <p class="review-author">- Alex Johnson</p>
+    <div class="review">
+      <img src="profile.png" alt="Profile Picture">
+      <div class="review-content">
+        <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
+        <p class="review-author">- Alex Johnson</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+
+</div>
 
 <div class="info-box">
   <p>Contact us for any queries or feedback:</p>
   <p>Email: info@shall.com</p>
   <p>Phone: +371 25 409 558</p>
-  <p>a </p>
-  <p>a </p>
+  <p>Phone: +371 25 409 558</p>
 </div>
 
+<footer class="footer">
+  <p>&copy; 2024 SHALL. Mācību uzņēmums.</p>
+</footer>
 
-  </section>
-    <section class="contact-us">
-    <p> </p>
-    <p> </p>
-    <p> </p>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; 2024 SHALL. Mācību uzņēmums.</p>
-  </footer>
-  <script src="script.js"></script>
 </body>
 </html>
