--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - SHALL</title>
+  <title>SHALL</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-  <h1>About Us - SHALL</h1>
+  <div class="banner">
+    <img src="banner.png" alt="Banner Image">
+    <h1>SHALL</h1>
+  </div>
   <img src="logo.png" alt="SHALL Logo">
 </header>
 
@@ -25,75 +28,54 @@
 
   <section class="promo-video">
     <h2>Promo Video</h2>
-    <!-- Adjusted YouTube video width -->
-    <iframe width="800" height="450" 
-    src="https://www.youtube.com/embed/JDOjFnN9RXw?si=lu3HVZPe64tczOxJ}" 
-    frameborder="0" allowfullscreen></iframe>
+    <video controls>
+      <source src="404(4).mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </section>
 
-  <section class="team">
-    <h2>Meet the Team</h2>
-    <div class="team-members">
-      <div class="team-member">
-        <img src="janis.png" alt="Jānis Bašēns">
-        <p><strong>Jānis Bašēns</strong> - CEO</p>
-      </div>
-      <div class="team-member">
-        <img src="roberts.png" alt="Roberts Assarovskis">
-        <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
-      </div>
-      <div class="team-member">
-        <img src="rotislavs.png" alt="Rotislavs Berjoza">
-        <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
-      </div>
-      <div class="team-member">
-        <img src="mihails.png" alt="Mihaels Pallijs">
-        <p><strong>Mihaels Pallijs</strong> - Programmer</p>
-      </div>
-      <div class="team-member">
-        <img src="arturs.png" alt="Artūrs Bogdanovs">
-        <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
-      </div>
+  <section class="contact-us">
+    <div class="info-box">
+      <h2>Contact Us</h2>
+      <p>Email: info@shall.com</p>
+      <p>Phone: +371 25 409 558</p>
+      <p>Phone: +371 25 409 558</p>
     </div>
-  </section>
 
-  <section class="reviews">
-    <h2>Customer Reviews</h2>
-    <div class="review">
-      <img src="profile.png" alt="Profile Picture">
-      <div class="review-content">
-        <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
-        <p class="review-author">- John Doe</p>
+    <div class="reviews">
+      <h2>Customer Reviews</h2>
+      <div class="review">
+        <img src="profile.png" alt="Profile Picture">
+        <div class="review-content">
+          <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
+          <p class="review-author">- John Doe</p>
+        </div>
       </div>
-    </div>
-    <div class="review">
-      <img src="profile.png" alt="Profile Picture">
-      <div class="review-content">
-        <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
-        <p class="review-author">- Jane Smith</p>
+      <div class="review">
+        <img src="profile.png" alt="Profile Picture">
+        <div class="review-content">
+          <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
+          <p class="review-author">- Jane Smith</p>
+        </div>
       </div>
-    </div>
-    <div class="review">
-      <img src="profile.png" alt="Profile Picture">
-      <div class="review-content">
-        <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
-        <p class="review-author">- Alex Johnson</p>
+      <div class="review">
+        <img src="profile.png" alt="Profile Picture">
+        <div class="review-content">
+          <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
+          <p class="review-author">- Alex Johnson</p>
+        </div>
       </div>
     </div>
   </section>
 
-</div>
+  <section class="office-images">
+    <div class="inside-office">
+      <h2>Inside the Office</h2>
+      <div class="image-box">
+        <!-- Add your description here -->
+        <img src="inside_office_image.png" alt="Inside Office Image">
+        <p>Description: This is a picture of our office interior.</p>
+      </div>
+    </div>
 
-<div class="info-box">
-  <p>Contact us for any queries or feedback:</p>
-  <p>Email: info@shall.com</p>
-  <p>Phone: +371 25 409 558</p>
-  <p>Phone: +371 25 409 558</p>
-</div>
-
-<footer class="footer">
-  <p>&copy; 2024 SHALL. Mācību uzņēmums.</p>
-</footer>
-
-</body>
-</html>
+    <div class="outside
