--- a/index.html
+++ b/index.html
@@ -28,17 +28,13 @@
 
   <section class="promo-video">
     <h2>Promo Video</h2>
-    <video controls>
-      <source src="404(4).mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xJSReXKdcAg?si=B7CoAI4H-xIEe1Ay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </section>
 
   <section class="contact-us">
     <div class="info-box">
       <h2>Contact Us</h2>
       <p>Email: info@shall.com</p>
-      <p>Phone: +371 25 409 558</p>
       <p>Phone: +371 25 409 558</p>
     </div>
 
