--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <header>
   <div class="banner">
     <img src="banner.png" alt="Banner Image">
-    <h1>SHALL</h1>
+    <div class="logo-name">
+      <img src="logo.png" alt="SHALL Logo">
+      <h1>SHALL</h1>
+    </div>
   </div>
-  <img src="logo.png" alt="SHALL Logo">
 </header>
 
 <div class="container">
