--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +13,8 @@
 <header>
   <div class="banner">
     <img src="banner.png" alt="Banner Image">
-    <div class="logo-name">
+    <div class="logo">
       <img src="logo.png" alt="SHALL Logo">
-      <h1>SHALL</h1>
     </div>
   </div>
 </header>
