--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,4 +75,11 @@
       </div>
     </div>
 
-    <div class="outside
+    <!-- Add more sections or content here -->
+
+  </section>
+
+</div>
+
+</body>
+</html>
