--- a/index.html
+++ b/index.html
@@ -39,7 +39,44 @@
       <p>Phone: +371 25 409 558</p>
     </div>
 
-    <div class="reviews">
+
+
+  <section class="office-images">
+    <div class="inside-office">
+      <h2>Inside the Office</h2>
+      <div class="image-box">
+        <!-- Add your description here -->
+        <div class="image-row">
+          <img src="sien.png" alt="Inside Office Image">
+          <img src="sien2.png" alt="Inside Office Image">
+        </div>
+        <div class="image-row">
+          <img src="sans.png" alt="Inside Office Image">
+          <img src="top.png" alt="Inside Office Image">
+        </div>
+        <p>Mūsu birojs Latvijā ir pilnībā iedvesmojošs - tas ir apveltīts ar oparta stila elementiem, kas rada dinamisku un modernu atmosfēru. Ar spilgtiem krāsu kontrastiem, izteiksmīgiem geometriskiem rakstiem un rūpīgi atlasītām mākslas detaļām mēs veidojam vidi, kurā darbs un radošums saplūst harmoniskā sintēzē. Šis birojs nav tikai darbavieta, bet gan māksliniecisks telpas, kurā ikviens darba brīdis kļūst par inspirācijas avotu.</p>
+      </div>
+    </div>
+
+    <section class="outside-office">
+      <div class="outside-office-content">
+        <h2>Outside the Office</h2>
+        <div class="image-box">
+          <img src="outside.jpg" alt="Outside Office Image">
+        </div>
+        <p>Ofiss atrodas Domina Shopping ofisā:</p>
+        <address>
+          Ieriķu iela 3, Rīga<br>
+          Riga, Latvia<br>
+          LV-1084
+        </address>
+        <p><strong>Here's how to get there:</strong></p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2174.9696772282814!2d24.160399877324352!3d56.96645189786504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eece4f87a96f9f%3A0xd4b908bee3cb6b97!2sDomina%20Shopping%2C%20iepirk%C5%A1an%C4%81s%20centrs!5e0!3m2!1slv!2slv!4v1712295163443!5m2!1slv!2slv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+  </section>
+
+      <div class="reviews">
       <h2>Customer Reviews</h2>
       <div class="review">
         <img src="profile.png" alt="Profile Picture">
@@ -64,21 +101,6 @@
       </div>
     </div>
   </section>
-
-  <section class="office-images">
-    <div class="inside-office">
-      <h2>Inside the Office</h2>
-      <div class="image-box">
-        <!-- Add your description here -->
-        <img src="inside_office_image.png" alt="Inside Office Image">
-        <p>Description: This is a picture of our office interior.</p>
-      </div>
-    </div>
-
-    <!-- Add more sections or content here -->
-
-  </section>
-
 </div>
 
 </body>
