--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 <div class="container">
 
   <section class="company-info">
-    <h2>Company Information</h2>
-    <p><strong>Industry:</strong> App Development</p>
-    <p><strong>Mission:</strong> To make day-to-day life easier and free up space on users' phones.</p>
-    <p><strong>Service:</strong> Our app consolidates shop discounts, making it convenient for users to find the best deals.</p>
-    <p><strong>Geographic Reach:</strong> Currently serving Latvia, with plans to expand to a larger scale.</p>
+    <h2>Par kompāniju</h2>
+    <p><strong>Mūsu misija:</strong> Lai atvieglotu ikdienas dzīvi un atbrīvotu vietu lietotāju tālruņos.</p>
+    <p><strong>Pakalpojums:</strong> Mūsu lietotne apvieno veikalu atlaides, padarot lietotājiem ērtu labāko piedāvājumu atrašanu.</p>
+    <p><strong>Reģions ko apkalpojam Reach:</strong> Šobrīd apkalpo Latviju, ar plāniem paplašināties plašākā mērogā.</p>
   </section>
 
   <section class="promo-video">
@@ -70,7 +69,7 @@
           Riga, Latvia<br>
           LV-1084
         </address>
-        <p><strong>Here's how to get there:</strong></p>
+        <p><strong>Kā nokļūt</strong></p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2174.9696772282814!2d24.160399877324352!3d56.96645189786504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eece4f87a96f9f%3A0xd4b908bee3cb6b97!2sDomina%20Shopping%2C%20iepirk%C5%A1an%C4%81s%20centrs!5e0!3m2!1slv!2slv!4v1712295163443!5m2!1slv!2slv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
@@ -81,22 +80,22 @@
       <div class="review">
         <img src="profile.png" alt="Profile Picture">
         <div class="review-content">
-          <p class="review-text">"Amazing app! It helped me save a lot of money on my shopping."</p>
-          <p class="review-author">- John Doe</p>
+          <p class="review-text">"Pārsteidzoša lietotne! Tas man palīdzēja ietaupīt daudz naudas, iepērkoties."</p>
+          <p class="review-author">- Kaspars</p>
         </div>
       </div>
       <div class="review">
         <img src="profile.png" alt="Profile Picture">
         <div class="review-content">
-          <p class="review-text">"Highly recommend! Great user experience and fantastic deals."</p>
-          <p class="review-author">- Jane Smith</p>
+          <p class="review-text">"Ļoti iesaku! Lieliska lietotāja pieredze un fantastiski piedāvājumi."</p>
+          <p class="review-author">- Jana</p>
         </div>
       </div>
       <div class="review">
         <img src="profile.png" alt="Profile Picture">
         <div class="review-content">
-          <p class="review-text">"SHALL app is a game-changer! I never miss out on discounts now."</p>
-          <p class="review-author">- Alex Johnson</p>
+          <p class="review-text">"Lietotne SHALL ir spēles mainītājs! Tagad es nekad nepalaižu garām atlaides."</p>
+          <p class="review-author">- Alekss</p>
         </div>
       </div>
     </div>
