--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <section class="company-info">
     <h2>Par kompāniju</h2>
+    <p><strong>MĀCĪBU UZŅĒMUMS</strong>
     <p><strong>Mūsu misija:</strong> Lai atvieglotu ikdienas dzīvi un atbrīvotu vietu lietotāju tālruņos.</p>
     <p><strong>Pakalpojums:</strong> Mūsu lietotne apvieno veikalu atlaides, padarot lietotājiem ērtu labāko piedāvājumu atrašanu.</p>
     <p><strong>Reģions ko apkalpojam Reach:</strong> Šobrīd apkalpo Latviju, ar plāniem paplašināties plašākā mērogā.</p>
@@ -33,9 +34,9 @@
 
   <section class="contact-us">
     <div class="info-box">
-      <h2>Contact Us</h2>
-      <p>Email: info@shall.com</p>
-      <p>Phone: +371 25 409 558</p>
+      <h2>Kā sazināties</h2>
+      <p>Ē-pasts: info@shall.com</p>
+      <p>Telefons: +371 25 409 558</p>
     </div>
 
 
