--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="office-images">
     <div class="inside-office">
-      <h2>Inside the Office</h2>
+      <h2>Offisa interjers</h2>
       <div class="image-box">
         <!-- Add your description here -->
         <div class="image-row">
@@ -54,13 +54,13 @@
           <img src="sans.png" alt="Inside Office Image">
           <img src="top.png" alt="Inside Office Image">
         </div>
-        <p>Mūsu birojs Latvijā ir pilnībā iedvesmojošs - tas ir apveltīts ar oparta stila elementiem, kas rada dinamisku un modernu atmosfēru. Ar spilgtiem krāsu kontrastiem, izteiksmīgiem geometriskiem rakstiem un rūpīgi atlasītām mākslas detaļām mēs veidojam vidi, kurā darbs un radošums saplūst harmoniskā sintēzē. Šis birojs nav tikai darbavieta, bet gan māksliniecisks telpas, kurā ikviens darba brīdis kļūst par inspirācijas avotu.</p>
+        <p>Mūsu birojs ir iedvesmojošs - tas ir apveltīts ar oparta stila elementiem, kas rada dinamisku un modernu atmosfēru. Ar spilgtiem krāsu kontrastiem, izteiksmīgiem geometriskiem rakstiem un rūpīgi atlasītām mākslas detaļām mēs veidojam vidi, kurā darbs un radošums saplūst harmoniskā sintēzē. Šis birojs nav tikai darbavieta, bet gan māksliniecisks telpas, kurā ikviens darba brīdis kļūst par inspirācijas avotu.</p>
       </div>
     </div>
 
     <section class="outside-office">
       <div class="outside-office-content">
-        <h2>Outside the Office</h2>
+        <h2>Offisa ārējais izskats</h2>
         <div class="image-box">
           <img src="outside.jpg" alt="Outside Office Image">
         </div>
@@ -77,7 +77,7 @@
   </section>
 
       <div class="reviews">
-      <h2>Customer Reviews</h2>
+      <h2>Lietotāju Atsauksmes</h2>
       <div class="review">
         <img src="profile.png" alt="Profile Picture">
         <div class="review-content">
