--- a/index.html
+++ b/index.html
@@ -39,7 +39,31 @@
       <p>Telefons: +371 25 409 558</p>
     </div>
 
-
+    <section class="team">
+    <h2>Meet the Team</h2>
+    <div class="team-members">
+      <div class="team-member">
+        <img src="janis.png" alt="Jānis Bašēns">
+        <p><strong>Jānis Bašēns</strong> - CEO</p>
+      </div>
+      <div class="team-member">
+        <img src="roberts.png" alt="Roberts Assarovskis">
+        <p><strong>Roberts Assarovskis</strong> - Head of Operations</p>
+      </div>
+      <div class="team-member">
+        <img src="rotislavs.png" alt="Rotislavs Berjoza">
+        <p><strong>Rotislavs Berjoza</strong> - Programmer</p>
+      </div>
+      <div class="team-member">
+        <img src="mihails.png" alt="Mihaels Pallijs">
+        <p><strong>Mihaels Pallijs</strong> - Programmer</p>
+      </div>
+      <div class="team-member">
+        <img src="arturs.png" alt="Artūrs Bogdanovs">
+        <p><strong>Artūrs Bogdanovs</strong> - Marketing</p>
+      </div>
+    </div>
+  </section>
 
   <section class="office-images">
     <div class="inside-office">
